--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-// ...existing code...
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -136,11 +135,48 @@
             border: 1px solid rgba(11,108,255,0.06);
         }
 
+        .contact-card,
+        .aboutme-card {
+            background: linear-gradient(90deg, #f2f8ff 60%, #eafff6 100%);
+            border-left: 6px solid var(--mint);
+            padding: 18px;
+            border-radius: 10px;
+            margin-bottom: 24px;
+            box-shadow: 0 3px 16px rgba(6,214,160,0.09);
+        }
+
+        .contact-card h2,
+        .aboutme-card h2 {
+            border-bottom: 2.5px solid rgba(6,214,160,0.17);
+            margin-top: 0;
+            color: #14b67a;
+        }
+
+        .contact-list {
+            list-style: none;
+            padding: 0;
+            margin: 6px 0 0 0;
+        }
+        .contact-list li {
+            margin-bottom: 8px;
+            font-size: 1rem;
+        }
+        .contact-label {
+            font-weight: 600;
+            color: #0b8261;
+        }
+        .aboutme-card p {
+            margin: 6px 0 0 0;
+            font-size: 1.08rem;
+            color: #1e384f;
+        }
+
         /* responsive */
         @media (max-width:700px){
             header{flex-direction:column; align-items:flex-start; padding:18px;}
             header .logo{width:56px;height:56px;font-size:18px;}
             .container{padding:16px;}
+            .contact-card, .aboutme-card{padding:12px;}
         }
     </style>
 </head>
@@ -155,6 +191,23 @@
     </header>
 
     <div class="container">
+
+        <!-- SECCION SOBRE MI -->
+        <div class="aboutme-card">
+            <h2>Sobre mí</h2>
+            <p>
+                Mi nombre es Fernando Antonio Castillo Watts, tengo 19 años y actualmente curso en la Universidad Tecnológica de Panamá. Quiero ser ingeniero, aunque todavía no sé qué rama exacta estudiar. Me gusta mucho practicar deportes, pasar tiempo en familia y enfrentarme a nuevos retos. Este semestre aprendí mucho sobre la programación y el desarrollo, y me gustaría compartirles algunos de mis proyectos realizados.
+            </p>
+        </div>
+
+        <!-- SECCION DE CONTACTO -->
+        <div class="contact-card">
+            <h2>Contacto</h2>
+            <ul class="contact-list">
+                <li><span class="contact-label">Celular:</span> 6017-7257</li>
+                <li><span class="contact-label">Correo:</span> <a href="mailto:fernando.castillo21@utp.ac.pa">fernando.castillo21@utp.ac.pa</a></li>
+            </ul>
+        </div>
 
         <div class="info-card">
             <h2>I. Información General (Datos del Estudiante)</h2>
@@ -172,7 +225,7 @@
         <div class="assignment">
             <h3>1. Ejercicio Práctico 1</h3>
             <p>
-                <strong>Comentario Personal:</strong> Este trabajo tenía que realizar problemas de <span class="badge">Lenguaje C</span> y entregarlos en formato de <span class="badge">Diagrama de Flujos</span>, <span class="badge">Pseudocódigo</span> y <span class="badge">Prueba de Escritorio</span>. Estos problemas tenían cierto grado de dificultad, porque se tenía que aplicar <span class="badge">Matemáticas</span> en algunos de los problemas.
+                <strong>Comentario Personal:</strong> Este trabajo tenía que realizar problemas de <span class="badge">Lenguaje C</span> y entregarlos en formato de <span class="badge">Diagrama de Flujos</span>, pseudocódigo y prueba de escritorio. Aprendí a organizar mejor las ideas y probar los algoritmos antes de codificar.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Pseudocódigo, Diagramas de Flujos, Prueba de Escritorio, Estructuras Condicionales (IF/ELSE), Lógica de Cálculos Salariales.</li>
@@ -183,7 +236,7 @@
         <div class="assignment">
             <h3>2. Ejercicio Práctico 2</h3>
             <p>
-                <strong>Comentario Personal:</strong> En el Ejercicio Práctico 2 usamos una <span class="badge">Máquina Virtual (VM)</span> para configurar <span class="badge">FTP</span> y probar transferencia de archivos. También implementamos conversión de horas (24h → 12h) en <span class="badge">Python</span>.
+                <strong>Comentario Personal:</strong> En el Ejercicio Práctico 2 usamos una <span class="badge">Máquina Virtual (VM)</span> para configurar <span class="badge">FTP</span> y probar transferencias de archivos. Fue mi primera experiencia con servidores y sistemas virtualizados.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Virtualización (VM), Configuración de Servidores, Transferencia de Archivos, Conversión de Horas, Python.</li>
@@ -194,7 +247,7 @@
         <div class="assignment">
             <h3>3. Examen Parcial 1</h3>
             <p>
-                <strong>Comentario Personal:</strong> El primer parcial trataba de 5 problemas de <span class="badge">Lenguaje C</span>. Nos pedían Prueba de Escritorio, Diagrama de Flujos y Pseudocódigos; los problemas incluían condicionales anidados y lógica salarial.
+                <strong>Comentario Personal:</strong> El primer parcial trataba de 5 problemas de <span class="badge">Lenguaje C</span>. Nos pedían Prueba de Escritorio, Diagrama de Flujos y Pseudocódigo. Me ayudó a reforzar la lógica y la resolución paso a paso.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Lenguaje C, Pseudocódigo, Diagramas de Flujos, Prueba de Escritorio, Condicionales Anidadas.</li>
@@ -205,7 +258,7 @@
         <div class="assignment">
             <h3>4. Examen Parcial 2</h3>
             <p>
-                <strong>Comentario Personal:</strong> Parcial en equipo: diseñamos un <span class="badge">POS (Punto de Venta)</span> en <span class="badge">Python/Tkinter</span>, con inventario y facturación. Investigamos arquitecturas SGBD y configuraciones de firewall para DDOS.
+                <strong>Comentario Personal:</strong> Parcial en equipo: diseñamos un <span class="badge">POS (Punto de Venta)</span> en <span class="badge">Python/Tkinter</span>, con inventario y facturación. Aprendí a trabajar en grupo y conectar interfaces gráficas con lógica de negocio.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Python/Tkinter, Lógica POS, Arquitectura SGBD, Seguridad (Firewall, DDOS).</li>
@@ -216,7 +269,7 @@
         <div class="assignment">
             <h3>5. Taller Práctico 1</h3>
             <p>
-                <strong>Comentario Personal:</strong> Investigación sobre gestión de listas y <span class="badge">Búsqueda Secuencial</span> en arreglos; además configuramos conexión <span class="badge">Python-MySQL</span> para un prototipo de sistema de alquiler.
+                <strong>Comentario Personal:</strong> Investigación sobre gestión de listas y <span class="badge">Búsqueda Secuencial</span> en arreglos; además configuramos conexión <span class="badge">Python-MySQL</span> para manejo de inventario desde código.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Arreglos, Búsqueda Secuencial, Python-MySQL, Lógica de Inventario.</li>
@@ -227,7 +280,7 @@
         <div class="assignment">
             <h3>6. Laboratorio Práctico 1</h3>
             <p>
-                <strong>Comentario Personal:</strong> Ejercicios iniciales: algoritmos secuenciales en <span class="badge">C</span>, operaciones I/O, precio neto, Teorema de Pitágoras y totales de ventas.
+                <strong>Comentario Personal:</strong> Ejercicios iniciales: algoritmos secuenciales en <span class="badge">C</span>, operaciones I/O, precio neto, Teorema de Pitágoras y totales de ventas. Afianzó mis bases.
             </p>
             <ul>
                 <li><strong>Conceptos Clave:</strong> Algoritmos Secuenciales, Lenguaje C, Operaciones Aritméticas.</li>
@@ -272,4 +325,3 @@
 
 </body>
 </html>
-// ...existing code...
