--- a/index.html
+++ b/index.html
@@ -323,82 +323,78 @@
             </li>
         </ul>
     </section>
-    <!-- ACTIVIDADES Y DOCUMENTOS ORDENADOS (igual a la última versión pero sin cambios aquí) -->
+    <!-- ACTIVIDADES Y DOCUMENTOS ORDENADOS -->
     <section class="section">
         <div class="section-title"><i class="fas fa-laptop-code"></i> Actividades del curso</div>
         <div class="actividad-grid">
-
-            <!-- ... las actividades iguales a la versión anterior ... -->
             <!-- EJERCICIO PRACTICO 1 -->
             <div class="actividad-item">
                 <div class="actividad-titulo">EJERCICIO PRACTICO 1</div>
                 <div class="actividad-desc">
-                    Este trabajo tenia que realizar problema de lenguaje C y entregarlos en formato de diagrama de flujos, pseudocodigo y prueba de escritorio, estos problemas tenían cierto grado de dificultad, porque se tenia que aplicar matemáticas y algebra en algunos de los problemas
+                    Este trabajo tenia que realizar problema de lenguaje C y entregarlos en formato de diagrama de flujos, pseudocodigo y prueba de escritorio, estos problemas tenían cierto grado de dificultad y requerían trabajo en equipo.
                 </div>
                 <a href="EJERCICIO PRÁCTICO- SAMUEL Y FERNANDO.docx" class="actividad-doc-link" target="_blank">Ver Documento</a>
             </div>
-            <!-- ...y el resto igual ...-->
-
             <div class="actividad-item">
                 <div class="actividad-titulo">EJERCICIO PRACTICO 2</div>
                 <div class="actividad-desc">
-                    En el ejercicio practico 2 teníamos que usar una maquina virtual para configurar el ftp o anydesk, y asi hacer prueba pasándonos archivos desde la maquina virtual a la computadora principal y viceversa
+                    En el ejercicio practico 2 teníamos que usar una maquina virtual para configurar el ftp o anydesk, y asi hacer prueba pasándonos archivos desde la maquina virtual a la computador principal.
                 </div>
                 <a href="EJERCICIO PRACTICO 2- FERNANDO Y SAMUEL.pdf" class="actividad-doc-link" target="_blank">Ver Documento</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">EXAMEN PARCIAL 1</div>
                 <div class="actividad-desc">
-                    El primer parcial trataba de 5 problemas de lenguaje C, en este caso nos dejaron usar la IA , pero nos costo porque nos pedían, prueba de escritorio, diagrama de flujos y pseudocodigos y si, con IA resulta mas fácil, pero no quita lo tedioso que es hacer un diagrama de flujos y revisar todos los pseudocodigos (no termine)
+                    El primer parcial trataba de 5 problemas de lenguaje C, en este caso nos dejaron usar la IA , pero nos costo porque nos pedían, prueba de escritorio, diagrama de flujos y pseudocódigo, además del código.
                 </div>
-                <a href="examen parcial 1 programacion.pdf" class="actividad-doc-link" target="_blank">Ver Examen</a>
+                <a href="Examen parcial 1 programacion.pdf" class="actividad-doc-link" target="_blank">Ver Examen</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">EXAMEN PARCIAL 2</div>
                 <div class="actividad-desc">
-                    Este parcial 2 tenía 4 partes, bastante largas, por eso era en grupo de 2, nos pedia diseñar un Sistema POS (Punto de Venta), que implementamos en Python con interfaz gráfica (Tkinter), cubriendo inventario y facturación. La parte teórica fue investigar sobre arquitecturas SGBD (bases de datos) y cómo configurar un Firewall para mitigar ataques de seguridad como el DDOS.
+                    Este parcial 2 tenía 4 partes, bastante largas, por eso era en grupo de 2, nos pedia diseñar un Sistema POS (Punto de Venta), que implementamos en Python con interfaz gráfica (Tkinter), manejo de base de datos y reportes PDF.
                 </div>
                 <a href="PARCIAL N2 - Samuel y Fernando.pdf" class="actividad-doc-link" target="_blank">Ver Examen</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">INVESTIGACION 1</div>
                 <div class="actividad-desc">
-                    Estas fueron tareas de contexto teórico. El Hexagrama era un mapa conceptual para tener una visión general de los temas del semestre (ciclos, modularidad, etc.). La Infografía se centró en la Historia de la Programación, para entender de dónde vienen los lenguajes que usamos, el impacto del Lenguaje C y la evolución de los sistemas de cómputo.
+                    Estas fueron tareas de contexto teórico. El Hexagrama era un mapa conceptual para tener una visión general de los temas del semestre (ciclos, modularidad, etc.). La Infografía sintetizaba la Historia de la Programación.
                 </div>
-                <img src="hexagrama.png" class="img-investigacion" alt="Hexagrama (mapa conceptual)">
-                <img src="infografia.png" class="img-investigacion" alt="Infografía Historia de la Programación">
+                <a href="hexagrama programacion semestre 2.pdf" class="actividad-doc-link" target="_blank">Hexagrama Programación Semestre 2 (PDF)</a>
+                <a href="Infografia Historia de la programacion.pdf" class="actividad-doc-link" target="_blank">Infografía Historia de la Programación (PDF)</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">INVESTIGACION 2</div>
                 <div class="actividad-desc">
-                    Esta actividad fue dividida entre análisis de código y diseño de redes. Por un lado, hicimos un Análisis FODA para comparar a fondo las ventajas y desventajas del Lenguaje C frente a Python. Por otro lado, usamos Cisco Packet Tracer para diseñar la Red LAN de una oficina, donde lo principal fue asignar el Direccionamiento IP y las Máscaras de Subred correctamente
+                    Esta actividad fue dividida entre análisis de código y diseño de redes. Por un lado, hicimos un Análisis FODA para comparar a fondo las ventajas y desventajas del Lenguaje C frente a Python, y por otro lado, diseñamos un diagrama de red para un sistema de tienda.
                 </div>
                 <a href="taller 2 desarrollo.pdf" class="actividad-doc-link" target="_blank">Ver Documento</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">LABORATORIO PRACTICO 1</div>
                 <div class="actividad-desc">
-                    Los primeros ejercicios del semestre, enfocados en algoritmos secuenciales y la sintaxis de Lenguaje C. La actividad era muy directa: problemas de input/output (usando printf/scanf), calcular el precio neto de un producto con un margen de ganancia, aplicar el Teorema de Pitágoras para hallar la hipotenusa, y hacer el total de ventas simples (refrescos). Pura secuencia y fórmulas.
+                    Los primeros ejercicios del semestre, enfocados en algoritmos secuenciales y la sintaxis de Lenguaje C. La actividad era muy directa: problemas de input/output (usando printf/scanf), lógica y ciclos básicos.
                 </div>
                 <a href="programacion tarea 1.pdf" class="actividad-doc-link" target="_blank">Ver Documento</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">TALLER PRACTICO 1</div>
                 <div class="actividad-desc">
-                    Taller intenso que nos hizo investigar sobre la gestión de listas: Búsqueda Secuencial en Arreglos y la configuración de una conexión Python-MySQL. Aplicamos esta teoría a un prototipo de Sistema de Alquiler de Equipos, donde tuvimos que modelar las tablas y la lógica para que el código pudiera insertar, actualizar y manejar el estado (ACTIVO/NO ACTIVO) del inventario.
+                    Taller intenso que nos hizo investigar sobre la gestión de listas: Búsqueda Secuencial en Arreglos y la configuración de una conexión Python-MySQL. Aplicamos esta teoría a un caso práctico en grupo.
                 </div>
-                <a href="taller practico n°1.pdf" class="actividad-doc-link" target="_blank">Ver Documento</a>
+                <a href="TALLER PRÁCTICO N°1.pdf" class="actividad-doc-link" target="_blank">Ver Documento</a>
             </div>
             <div class="actividad-item">
                 <div class="actividad-titulo">ANOTACIONES</div>
                 <div class="actividad-desc">Notas y apuntes sobre desarrollo lógico y los temas más importantes del curso.</div>
-                <a href="apuntes desarrollo logico.pdf" class="actividad-doc-link" target="_blank">Ver Apuntes</a>
+                <a href="APUNTES DESARROLLO LÓGICO.pdf" class="actividad-doc-link" target="_blank">Ver Apuntes</a>
             </div>
         </div>
     </section>
     <script>
     // Animación "máquina de escribir" en descripción
-    const textoSobreMi = "Mi nombre es Fernando Antonio Castillo Watts, tengo 19 años y actualmente curso en la Universidad Tecnológica de Panamá. Quiero ser ingeniero, aunque todavía no sé qué rama me apasiona más. Este semestre aprendí mucho sobre programación y desarrollo. Me gustaría compartir algunos de los proyectos que realicé en el curso.";
+    const textoSobreMi = "Mi nombre es Fernando Antonio Castillo Watts, tengo 19 años y actualmente curso en la Universidad Tecnológica de Panamá. Quiero ser ingeniero, aunque todavía no sé qué rama. Me gusta resolver problemas y aprender cosas nuevas, especialmente del área tecnológica, y este portafolio es una muestra de mi avance y dedicación.";
     let i = 0;
     function typeWriter() {
         if (i < textoSobreMi.length) {
